# FImdlp

./: .gitignore  .gitmodules  Ejemplo.xlsx  LICENSE  MANIFEST.in  Makefile  README.md  c.txt  cfimdlp.pyx  debug.cpp  feature0.txt  feature0_ant.txt  feature0_new.txt  k.py  p.txt  pyproject.toml  sample.py  setup.py  test1.xlsx
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml
fimdlp/: CMakeLists.txt  CPPFImdlp.cpp  CPPFImdlp.h  Metrics.cpp  Metrics.h  __init__.py  ccFImdlp.cc  ccFImdlp.h  ccMetrics.cc  ccMetrics.h  cfimdlp.pyx  m2.cpp  main  main.cpp  mdlp.py  pyfimdlp.py  test  test.cpp  typesFImdlp.h
fimdlp/bak/: CPPFImdlp.cpp  CPPFImdlp.h  Metrics.cpp  Metrics.h
fimdlp/test/: CMakeLists.txt  Metrics_unittest.cc  test.sh
fimdlp/testcpp/: ArffFiles.cpp  CMakeLists.txt  FImdlp_unittest.cc  Metrics_unittest.cc  main  main.cpp
fimdlp/testcpp/xx/: ArffFiles.cpp  ArffFiles.h  CMakeLists.txt  main.cpp
fimdlp/tests/: FImdlp_test.py  __init__.py
prueba/: FImdlp.cpp  FImdlp.h  Makefile  cfimdlp.pyx  pyproject.toml  sample.py  setup.py
samples/: ArffFiles.cpp  ArffFiles.h  CMakeLists.txt  sample.cpp  sample.py
src/cppmdlp/: CMakeLists.txt  CPPFImdlp.cpp  CPPFImdlp.h  LICENSE  README.md
src/cppmdlp/sample/: CMakeLists.txt  sample.cpp
src/cppmdlp/tests/: CMakeLists.txt  FImdlp_unittest.cpp  test
src/fimdlp/: ArffFiles.cpp  ArffFiles.h  Factorize.cpp  Factorize.h  __init__.py  cfimdlp.pyx  mdlp.py
src/fimdlp/cppmdlp/: .gitignore  CPPFImdlp.h  Metrics.h
src/fimdlp/cppmdlp/tests/: cover
src/fimdlp/cppmdlp/tests/datasets/: kdd_JapaneseVowels.arff
src/fimdlp/tests/: FImdlp_test.py  __init__.py
