cmake_minimum_required(VERSION 3.24)
project(fimdlp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(testcpp/build/_deps/googletest-src/googlemock/include)
include_directories(testcpp/build/_deps/googletest-src/googlemock/include/gmock)
include_directories(testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal)
include_directories(testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/custom)
include_directories(testcpp/build/_deps/googletest-src/googlemock/test)
include_directories(testcpp/build/_deps/googletest-src/googletest/include)
include_directories(testcpp/build/_deps/googletest-src/googletest/include/gtest)
include_directories(testcpp/build/_deps/googletest-src/googletest/include/gtest/internal)
include_directories(testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/custom)
include_directories(testcpp/build/_deps/googletest-src/googletest/samples)
include_directories(testcpp/build/_deps/googletest-src/googletest/src)
include_directories(testcpp/build/_deps/googletest-src/googletest/test)

add_executable(fimdlp
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/custom/gmock-matchers.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/custom/gmock-port.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/gmock-internal-utils.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/gmock-port.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/internal/gmock-pp.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-actions.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-cardinalities.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-function-mocker.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-matchers.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-more-actions.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-more-matchers.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-nice-strict.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock-spec-builders.h
        testcpp/build/_deps/googletest-src/googlemock/include/gmock/gmock.h
        testcpp/build/_deps/googletest-src/googlemock/src/gmock-all.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock-cardinalities.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock-internal-utils.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock-matchers.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock-spec-builders.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock.cc
        testcpp/build/_deps/googletest-src/googlemock/src/gmock_main.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-actions_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-cardinalities_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-function-mocker_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-internal-utils_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-matchers-arithmetic_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-matchers-comparisons_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-matchers-containers_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-matchers-misc_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-matchers_test.h
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-more-actions_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-nice-strict_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-port_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-pp-string_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-pp_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock-spec-builders_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_all_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_ex_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_leak_test_.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_link2_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_link_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_link_test.h
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_output_test_.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_stress_test.cc
        testcpp/build/_deps/googletest-src/googlemock/test/gmock_test.cc
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/custom/gtest-port.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/custom/gtest-printers.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/custom/gtest.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-death-test-internal.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-filepath.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-internal.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-param-util.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-port-arch.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-port.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-string.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-type-util.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-assertion-result.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-death-test.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-matchers.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-message.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-param-test.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-printers.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-spi.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-test-part.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest-typed-test.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest_pred_impl.h
        testcpp/build/_deps/googletest-src/googletest/include/gtest/gtest_prod.h
        testcpp/build/_deps/googletest-src/googletest/samples/prime_tables.h
        testcpp/build/_deps/googletest-src/googletest/samples/sample1.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample1.h
        testcpp/build/_deps/googletest-src/googletest/samples/sample10_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample1_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample2.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample2.h
        testcpp/build/_deps/googletest-src/googletest/samples/sample2_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample3-inl.h
        testcpp/build/_deps/googletest-src/googletest/samples/sample3_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample4.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample4.h
        testcpp/build/_deps/googletest-src/googletest/samples/sample4_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample5_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample6_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample7_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample8_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/samples/sample9_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-all.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-assertion-result.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-death-test.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-filepath.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-internal-inl.h
        testcpp/build/_deps/googletest-src/googletest/src/gtest-matchers.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-port.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-printers.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-test-part.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest-typed-test.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest.cc
        testcpp/build/_deps/googletest-src/googletest/src/gtest_main.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-break-on-failure-unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-catch-exceptions-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-color-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-death-test-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-death-test_ex_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-env-var-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-failfast-unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-filepath-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-filter-unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-global-environment-unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-list-tests-unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-listener-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-message-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-options-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-output-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-param-test-invalid-name1-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-param-test-invalid-name2-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-param-test-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-param-test-test.h
        testcpp/build/_deps/googletest-src/googletest/test/googletest-param-test2-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-port-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-printers-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-setuptestsuite-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-shuffle-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-test-part-test.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-throw-on-failure-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/googletest-uninitialized-test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest-typed-test2_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest-typed-test_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest-typed-test_test.h
        testcpp/build/_deps/googletest-src/googletest/test/gtest-unittest-api_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_all_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_assert_by_exception_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_environment_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_help_test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_list_output_unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_main_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_no_test_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_pred_impl_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_premature_exit_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_prod_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_repeat_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_skip_in_environment_setup_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_skip_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_sole_header_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_stress_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_test_macro_stack_footprint_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_testbridge_test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_throw_on_failure_ex_test.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_unittest.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_xml_outfile1_test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_xml_outfile2_test_.cc
        testcpp/build/_deps/googletest-src/googletest/test/gtest_xml_output_unittest_.cc
        testcpp/build/_deps/googletest-src/googletest/test/production.cc
        testcpp/build/_deps/googletest-src/googletest/test/production.h
        testcpp/CMakeLists.txt
        testcpp/FImdlp_unittest.cc
        testcpp/Metrics_unittest.cc
        cfimdlp.cpp
        CPPFImdlp.cpp
        CPPFImdlp.h
        Metrics.cpp
        Metrics.h
        typesFImdlp.h)
